--- a/PassionProject/PassionProject.csproj
+++ b/PassionProject/PassionProject.csproj
@@ -26,6 +26,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,17 +50,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
@@ -103,6 +102,7 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
@@ -196,17 +196,9 @@
     <Compile Include="Migrations\202302110051309_Appointment.designer.cs">
       <DependentUpon>202302110051309_Appointment.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202302110053443_Employee.cs" />
-    <Compile Include="Migrations\202302110053443_Employee.designer.cs">
-      <DependentUpon>202302110053443_Employee.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202302110100237_SpaService.cs" />
-    <Compile Include="Migrations\202302110100237_SpaService.designer.cs">
-      <DependentUpon>202302110100237_SpaService.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202302110119512_initial.cs" />
-    <Compile Include="Migrations\202302110119512_initial.designer.cs">
-      <DependentUpon>202302110119512_initial.cs</DependentUpon>
+    <Compile Include="Migrations\202302231926275_Tables.cs" />
+    <Compile Include="Migrations\202302231926275_Tables.designer.cs">
+      <DependentUpon>202302231926275_Tables.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -295,14 +287,8 @@
     <EmbeddedResource Include="Migrations\202302110051309_Appointment.resx">
       <DependentUpon>202302110051309_Appointment.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202302110053443_Employee.resx">
-      <DependentUpon>202302110053443_Employee.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202302110100237_SpaService.resx">
-      <DependentUpon>202302110100237_SpaService.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202302110119512_initial.resx">
-      <DependentUpon>202302110119512_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202302231926275_Tables.resx">
+      <DependentUpon>202302231926275_Tables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
